fix the spacing of the welcome text to make all text fit on the screen

--- a/index-styling.css
+++ b/index-styling.css
@@ -47,7 +47,7 @@ p
     color: var(--primary);
     margin: auto;
     text-align: center;
-    padding-top:7%;
+    padding-top:3%;
     text-shadow: 2px 1px #000000;
 }
 
